# vexide-swervelib

./: Cargo.toml  README.md
src/: eclipselib.rs  main.rs  robot.rs  swervelib.rs
src/eclipselib/: drive.rs  motors.rs  odometry.rs  pid.rs  pneumatics.rs
src/swervelib/: spline.rs  swervedrive.rs  swervemod.rs  swervemotor.rs  swervemotors.rs
