[package]
name = "swervelib_project"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1 # Default slot
icon = "cool-x"
compress = true

[dependencies]
autons = "0.1.0"
vexide = "0.7.0"
